--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ http://nas.io/darkART
 
 -->
 
+<meta name="google-site-verification" content="jUQN_sEbUf3E5z_cC-YBJOCtreTdHnfGC1ZDE6_eIPs" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="description" content="aHmad is skilled in adv. sys.
 ops. and R.A.T. technology
